# gaussian-converter

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build-binaries.yml
converter_core/: Cargo.toml  README.md
converter_core/src/: lib.rs  main.rs
converter_core/src/formats/: csv.rs  mod.rs  ply.rs  splat.rs  spz.rs
converter_core/src/helpers/: mod.rs  quaternion_multiplication.rs
converter_core/tests/: ply_test.rs  splat_test.rs  spz_importer_test.rs
conveter_core/: Cargo.toml
conveter_core/src/: error.rs
conveter_core/src/formats/: ply.rs
conveter_core/tests/: ply_importer_test.rs
gs-flux/: Cargo.toml  README.md
gs-flux-desktop/: README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
gs-flux-desktop/app/pages/: index.vue
gs-flux-desktop/src-tauri/: Cargo.toml  tauri.conf.json
gs-flux-desktop/src-tauri/capabilities/: default.json
gs-flux-desktop/src-tauri/icons/: icon.icns
gs-flux-desktop/src-tauri/src/: lib.rs
gs-flux/src/: main.rs
wasm/: Cargo.toml  README.md
wasm/frontend/: index.html  index.js  style.css  worker.js
wasm/src/: lib.rs
