[package]
name = "gs-flux-desktop"
version = "0.1.0"
description = "GUI for converting gaussian splatting files to and from other formats"
authors = ["leo", "splattr"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-log = "2"
converter_core = { path = "../../converter_core" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
uuid = { version = "1.18.0", features = ["v4"] }
dirs-next = "2.0.0"
